--- a/package.json
+++ b/package.json
@@ -2,8 +2,7 @@
   "name": "good-api",
   "version": "1.0.0",
   "description": "A good API",
-  "type": "module",
-  "main": "src/app.js",
+  "main": "app.ts",
   "scripts": {
     "start": "nodemon",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -17,6 +16,8 @@
     "winston": "^3.8.2"
   },
   "devDependencies": {
-    "nodemon": "^2.0.19"
+    "nodemon": "^2.0.19",
+    "ts-node": "^10.9.1",
+    "typescript": "^4.8.2"
   }
 }
