--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "dotenv": "^16.0.2",
     "express": "^4.18.1",
     "lodash": "^4.17.21",
+    "reflect-metadata": "^0.1.13",
+    "typedi": "^0.10.0",
     "winston": "^3.8.2"
   },
   "devDependencies": {
